@@ -1,3 +1,5 @@
+- bug command: fix choosing the usb-key/floppy drive
+  (ie adapting interactive::stdio to new interactive callbacks)
 - add /usr/share/ldetect-lst/fallback-modules.alias for 
   drakx-in-chroot on old kernels
 - fallback to kernel-desktop
